<resources>
    <string name="app_name">Fabulash</string>
    <string name="fabulash">Fabulash</string>
    <string name="slogan">Pestañas de lujo, belleza en cada\n parpadeo</string>
    <string name="comenzar">Comenzar</string>
    <string name="login">Login</string>
    <string name="register">¿No tiene cuenta? ¡Regístrese aquí!</string>
    <string name="rainbow">Rainbow</string>
    <string name="fabulashLogo">Fabulash Logo</string>
    <string name="campo_requerido">Campo requerido</string>
    <string name="registro">Registro</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="email">Email</string>
    <string name="tel_fono">Teléfono</string>
    <string name="contrase_a">Contraseña</string>
    <string name="confirme_contrase_a">Confirme contraseña</string>
    <string name="registrar">Registrar</string>
    <string name="atr_s">Atrás</string>
    <string name="hola">Hola</string>
    <string name="foto_del_usuario">Foto del usuario</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="next_appointment">Próxima cita</string>
    <string name="agendar_nueva_cita">Agendar Nueva Cita</string>
    <string name="filtros">Filtros</string>
    <string name="galeria">Galería</string>
    <string name="descubre_nuestros_estilos">¡Descubre nuestros estilos de pestañas!</string>
    <string name="deja_una_resena">Deja una reseña</string>
    <string name="title_activity_choose_service">ChooseService</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="elija_servicio">Elija Servicio</string>
    <string name="siguiente">Siguiente</string>
    <string name="elija_pestanas">Elija Pestañas</string>
    <string name="i_a">I.A</string>
    <string name="ya_conoce_su_estilo_preferido">¿Ya conoce su estilo preferido?</string>
    <string name="filtrar_por">Filtrar por:</string>
    <string name="buscar_por_nombre">Buscar por nombre</string>
    <string name="elija_personal">Elija Personal</string>

    <string name="changePWD">Cambiar Contraseña</string>
    <string name="newPWD">Nueva Contraseña</string>
    <string name="mod_datos">Modificar Datos</string>
    <string name="review">Escriba su reseña</string>

    <string name="elija_cita">Elija Cita</string>

    <string-array name="filters">
        <item>Natural</item>
        <item>Grande</item>
        <item>Pequeño</item>
        <item>Exótico</item>
    </string-array>
    <string name="administrar_tarjetas">Administrar Tarjetas</string>
    <string name="configuracion_cuenta">Configuración de Cuenta</string>
    <string name="mis_reseñas">Mis Reseñas</string>
    <string name="eliminar_cuenta">Eliminar Cuenta</string>
    <string name="logout">Logout</string>
    <string name="logout_question">¿Salir de Cuenta?</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="delete_question">Estas a punto de eliminar tu cuenta</string>
    <string name="delete_details">¿Estas seguro?\nEsta acción no es reversible</string>
    <string name="tarjetas">Tarjetas</string>
    <string name="cvc">CVC</string>
    <string name="fecha">Fecha</string>
    <string name="registrar_tarjeta">Registrar Tarjeta</string>
    <string name="nombreTitular">Nombre del titular</string>
    <string name="numeroTarjeta">Numero de la tarjeta</string>
    <string name="fechaTarjeta">YYYY-MM</string>
    <string name="cvcTarjeta">CVC</string>
    <string name="agregar">Agregar</string>
    <string name="eliminar">Eliminar</string>
    <string name="eliminarSelect">Selecciona la tarjeta a eliminar:</string>
    <string name="deleteCard_question">Estas a punto de eliminar la tarjeta:</string>
    <string name="cancelar">Cancelar</string>
    <string name="tarjetaEliminada">Tarjeta Eliminada</string>
    <string name="modificar">Modificar</string>
    <string name="modificarSelect">Selecciona la tarjeta a modificar:</string>
    <string name="modificar_tarjeta">Modificar Tarjeta</string>

    <string name="edt_comment">Comentarios</string>

    <string name="title_activity_choose_payment">ChoosePayment</string>
    <string name="detalles">Detalles</string>
    <string name="servicio">Servicio</string>
    <string name="pestanas">Pestañas</string>
    <string name="total">Total</string>
    <string name="elija_forma_de_pago">Elija Forma de Pago</string>
    <string name="cita_confirmada">¡Cita Confirmada!</string>
    <string name="terminar">Terminar</string>
    <string name="mis_citas">Mis Citas</string>
    <string name="mis_reviews">Mis reseñas</string>
    <string name="comment">Comentario</string>
    <string name="dejenos_review">Dejenos una reseña</string>
    <string name="comentarios">Comentarios...</string>
    <string name="mandar">Mandar</string>
    <string name="reprogramar">Reprogramar</string>
    <string name="guardar">Guardar</string>
    <string name="currentPWD">Contraseña actual</string>
    <string name="edit_review">Modificar reseña</string>
    <string name="apellidoTitular">Apellido del titular</string>
    <string name="fechaTarjeta2">aaaa-mm-dd</string>
    <string name="error_en_la_api">Error en la api</string>

</resources>