<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:background="@color/day">

    <ImageButton
        android:id="@+id/registerBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/ButtonsStyle2"
        android:layout_marginTop="8dp"
        android:src="@drawable/back_button"
        android:contentDescription="@string/atr_s"
        android:padding="16dp"/>

    <TextView
        android:id="@+id/registerTitleFabulash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerBackButton"
        android:text="@string/fabulash"
        style="@style/FabulashText"
        android:layout_marginTop="-16dp"/>

    <ImageView
        android:id="@+id/registerLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerTitleFabulash"
        android:src="@drawable/dark_closed_eye"
        android:contentDescription="@string/fabulashLogo"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/registerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/registerLogo"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/registro"
        android:textSize="40sp"
        android:fontFamily="@font/spicy"
        android:textColor="@color/night"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintTop_toBottomOf="@id/registerTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/nombre"
        app:endIconMode="clear_text"
        style="@style/InputLayout"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:imeOptions="actionNext"
            android:nextFocusForward="@id/registerLastname"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutLast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintTop_toBottomOf="@id/layoutName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/apellido"
        app:endIconMode="clear_text"
        style="@style/InputLayout"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerLastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:imeOptions="actionNext"
            android:nextFocusForward="@id/registerEmail"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintTop_toBottomOf="@id/layoutLast"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/email"
        app:endIconMode="clear_text"
        style="@style/InputLayout"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"
            android:nextFocusForward="@id/registerPhone"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintTop_toBottomOf="@id/layoutEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/tel_fono"
        app:endIconMode="clear_text"
        style="@style/InputLayout"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:imeOptions="actionNext"
            android:nextFocusForward="@id/registerPwd1"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutPwd1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintTop_toBottomOf="@id/layoutPhone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/contrase_a"
        app:endIconMode="password_toggle"
        style="@style/InputLayout"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerPwd1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:imeOptions="actionNext"
            android:nextFocusForward="@id/registerPwd2"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutPwd2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintTop_toBottomOf="@id/layoutPwd1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/confirme_contrase_a"
        app:endIconMode="password_toggle"
        style="@style/InputLayout"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerPwd2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/registrar"
        style="@style/ButtonsStyle1"
        android:layout_marginBottom="16dp"/>

    <ImageView
        android:id="@+id/imgDownLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/down_rainbow_left"
        android:contentDescription="@string/rainbow"/>

    <ImageView
        android:id="@+id/imgDownRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/down_rainbow_right"
        android:contentDescription="@string/rainbow"/>

</androidx.constraintlayout.widget.ConstraintLayout>