<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeleteCard"
    android:background="@color/day">

    <ImageButton
        android:id="@+id/deleteCardBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/ButtonsStyle2"
        android:layout_marginTop="8dp"
        android:src="@drawable/back_button"
        android:backgroundTint="#fff"
        android:contentDescription="@string/atr_s"
        android:padding="16dp"/>

    <ImageView
        android:id="@+id/tarjetasLogo"
        android:layout_width="200dp"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/deleteCardBackButton"
        android:src="@drawable/dark_closed_eye"
        android:contentDescription="@string/fabulashLogo"/>

    <TextView
        android:id="@+id/tarjetaTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tarjetasLogo"
        android:text="@string/eliminar"
        android:textSize="35sp"
        style="@style/FabulashText"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/seleccionaTarjeta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tarjetaTitle"
        android:text="@string/eliminarSelect"
        android:fontFamily="@font/montserratregular"
        android:textSize="18sp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerDeleteTarjetas"
        android:layout_width="0dp"
        android:layout_height="460dp"
        app:layout_constraintTop_toBottomOf="@id/seleccionaTarjeta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        tools:listitem="@layout/tarjetas_cards"/>


    <Button
        android:id="@+id/deleteCardButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/recyclerDeleteTarjetas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/ButtonsStyle1"
        android:textColor="@color/white"
        android:text="@string/eliminar"
        android:clickable="false"/>

</androidx.constraintlayout.widget.ConstraintLayout>